# ChangeLog for app-misc/calculate-meta
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-meta-12.0 (22 Jun 2012)

  22 Jun 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-meta-11.15.ebuild, +calculate-meta-12.0.ebuild:
  version bump

*calculate-meta-11.15 (07 Mar 2012)

  07 Mar 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-meta-11.12.ebuild, +calculate-meta-11.15.ebuild:
  version bump

*calculate-meta-11.12 (05 Dec 2011)

  05 Dec 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-meta-11.9-r1.ebuild, +calculate-meta-11.12.ebuild:
  version bump

  20 Sep 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-meta-11.6.ebuild, -calculate-meta-11.6-r1.ebuild,
  +calculate-meta-11.9.ebuild:
  version bump

*calculate-meta-11.9 (20 Sep 2011)

  05 Jul 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-meta-11.6-r1.ebuild:
  Fix updating the calculate utilities.

*calculate-meta-11.6 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-meta-11.6.ebuild, -calculate-meta-11.3.ebuild:
  Version bump.

*calculate-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-meta-11.0-r6.ebuild, +calculate-meta-11.3.ebuild:
  Version bump.

*calculate-meta-11.0-r2 (30 Dec 2010)

  30 Dec 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> -calculate-meta-11.0-r1.ebuild,
  +calculate-meta-11.0-r2.ebuild:
  remove x11-plugins/pidgin-facebookchat

*calculate-meta-10.999-r1 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-meta-10.999.ebuild, +calculate-meta-10.999-r1.ebuild:
  Renamed USE flag to CDISTRO.

*calculate-meta-10.999 (24 Nov 2010)

  24 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-meta-10.999.ebuild:
  new meta-package
