@@ -2,6 +2,13 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-meta-12.0.3 (31 Aug 2012)
+
+  31 Aug 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -calculate-meta-12.0-r2.ebuild, -calculate-meta-12.0-r3.ebuild,
+  -calculate-meta-12.0-r4.ebuild, +calculate-meta-12.0.3.ebuild:
+  version bump
+
 *calculate-meta-12.0 (22 Jun 2012)
 
   22 Jun 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
